<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingHorizontal="20dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/camera_card"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/text_email"
            android:layout_marginStart="-25dp"
            android:layout_toEndOf="@+id/card_profile"
            android:translationZ="4dp"
            app:cardCornerRadius="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_menu_camera" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="50dp">

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_account_circle_24" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/card_profile"
            android:fontFamily="@font/rubik_black"
            android:includeFontPadding="false"
            android:text="@string/default_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/card_profile"
            android:includeFontPadding="false"
            android:text="@string/default_email"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_profile"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_marginStart="8dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_local_phone_24" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Caption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number" />

                    <TextView
                        android:id="@+id/text_phone"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_phone" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</LinearLayout>